--- a/package.json
+++ b/package.json
@@ -1,103 +1,105 @@
 {
-  "name": "botillery",
-  "private": true,
-  "license": "MIT",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev -p 1420",
-    "tauri:dev": "tauri dev",
-    "build": "next build",
-    "lint": "biome check .",
-    "lint:fix": "biome check --apply-unsafe .",
-    "format": "biome format --write .",
-    "taze": "taze major -I",
-    "taze:minor": "taze minor -w",
-    "tauri": "tauri"
-  },
-  "dependencies": {
-    "@auth/core": "0.28.0",
-    "@faker-js/faker": "8.0.2",
-    "@hookform/resolvers": "3.1.1",
-    "@radix-ui/react-accessible-icon": "1.0.3",
-    "@radix-ui/react-accordion": "1.1.2",
-    "@radix-ui/react-alert-dialog": "1.0.4",
-    "@radix-ui/react-aspect-ratio": "1.0.3",
-    "@radix-ui/react-avatar": "1.0.3",
-    "@radix-ui/react-checkbox": "1.0.4",
-    "@radix-ui/react-collapsible": "1.0.3",
-    "@radix-ui/react-context-menu": "2.1.4",
-    "@radix-ui/react-dialog": "1.0.4",
-    "@radix-ui/react-dropdown-menu": "2.0.5",
-    "@radix-ui/react-hover-card": "1.0.6",
-    "@radix-ui/react-icons": "1.3.0",
-    "@radix-ui/react-label": "2.0.2",
-    "@radix-ui/react-menubar": "1.0.3",
-    "@radix-ui/react-navigation-menu": "1.1.3",
-    "@radix-ui/react-popover": "1.0.6",
-    "@radix-ui/react-progress": "1.0.3",
-    "@radix-ui/react-radio-group": "1.1.3",
-    "@radix-ui/react-scroll-area": "1.0.4",
-    "@radix-ui/react-select": "1.2.2",
-    "@radix-ui/react-separator": "1.0.3",
-    "@radix-ui/react-slider": "1.1.2",
-    "@radix-ui/react-slot": "1.0.2",
-    "@radix-ui/react-switch": "1.0.3",
-    "@radix-ui/react-tabs": "1.0.4",
-    "@radix-ui/react-toast": "1.1.4",
-    "@radix-ui/react-toggle": "1.0.3",
-    "@radix-ui/react-toggle-group": "1.0.4",
-    "@radix-ui/react-tooltip": "1.0.6",
-    "@tailwindcss/line-clamp": "0.4.4",
-    "@tanstack/react-table": "8.9.3",
-    "@tauri-apps/api": "2.0.0-beta.6",
-    "@tauri-apps/plugin-fs": "2.0.0-beta.2",
-    "@tauri-apps/plugin-os": "2.0.0-beta.2",
-    "@tauri-apps/plugin-shell": "2.0.0-beta.2",
-    "@types/lodash": "4.17.0",
-    "axios": "1.6.8",
-    "class-variance-authority": "0.7.0",
-    "clsx": "2.0.0",
-    "cmdk": "0.2.0",
-    "date-fns": "2.30.0",
-    "lodash": "4.17.21",
-    "lucide-react": "0.263.1",
-    "nanoid": "4.0.2",
-    "next": "14.1.4",
-    "next-auth": "5.0.0-beta.15",
-    "next-themes": "0.2.1",
-    "react": "18.2.0",
-    "react-day-picker": "8.8.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "7.45.2",
-    "react-wrap-balancer": "1.0.0",
-    "recharts": "2.7.2",
-    "tailwind-merge": "1.14.0",
-    "tailwind-scrollbar": "3.0.4",
-    "tailwindcss-animate": "1.0.6",
-    "tauri-controls": "0.4.0",
-    "yup": "1.4.0",
-    "zod": "3.21.4",
-    "zustand": "4.5.2"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.6.2",
-    "@ianvs/prettier-plugin-sort-imports": "4.1.0",
-    "@semantic-release/commit-analyzer": "^12.0.0",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^10.0.2",
-    "@semantic-release/release-notes-generator": "^13.0.0",
-    "@tauri-apps/cli": "2.0.0-beta.11",
-    "@types/node": "20.4.6",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "conventional-changelog-conventionalcommits": "^7.0.2",
-    "postcss": "8.4.27",
-    "prettier": "3.0.1",
-    "prettier-plugin-tailwindcss": "0.4.1",
-    "semantic-release-replace-plugin": "^1.2.7",
-    "tailwindcss": "3.3.3",
-    "taze": "0.11.2",
-    "typescript": "5.1.6"
-  }
+	"name": "botillery",
+	"private": true,
+	"license": "MIT",
+	"version": "1.0.0",
+	"scripts": {
+		"dev": "next dev -p 1420",
+		"tauri:dev": "tauri dev",
+		"generate": "next build",
+		"lint": "biome check .",
+		"lint:fix": "biome check --apply-unsafe .",
+		"format": "biome format --write .",
+		"taze": "taze major -I",
+		"taze:minor": "taze minor -w",
+		"tauri": "tauri"
+	},
+	"dependencies": {
+		"@auth/core": "0.28.0",
+		"@faker-js/faker": "8.0.2",
+		"@hookform/resolvers": "3.1.1",
+		"@radix-ui/react-accessible-icon": "1.0.3",
+		"@radix-ui/react-accordion": "1.1.2",
+		"@radix-ui/react-alert-dialog": "1.0.4",
+		"@radix-ui/react-aspect-ratio": "1.0.3",
+		"@radix-ui/react-avatar": "1.0.3",
+		"@radix-ui/react-checkbox": "1.0.4",
+		"@radix-ui/react-collapsible": "1.0.3",
+		"@radix-ui/react-context-menu": "2.1.4",
+		"@radix-ui/react-dialog": "1.0.4",
+		"@radix-ui/react-dropdown-menu": "2.0.5",
+		"@radix-ui/react-hover-card": "1.0.6",
+		"@radix-ui/react-icons": "1.3.0",
+		"@radix-ui/react-label": "2.0.2",
+		"@radix-ui/react-menubar": "1.0.3",
+		"@radix-ui/react-navigation-menu": "1.1.3",
+		"@radix-ui/react-popover": "1.0.6",
+		"@radix-ui/react-progress": "1.0.3",
+		"@radix-ui/react-radio-group": "1.1.3",
+		"@radix-ui/react-scroll-area": "1.0.4",
+		"@radix-ui/react-select": "1.2.2",
+		"@radix-ui/react-separator": "1.0.3",
+		"@radix-ui/react-slider": "1.1.2",
+		"@radix-ui/react-slot": "1.0.2",
+		"@radix-ui/react-switch": "1.0.3",
+		"@radix-ui/react-tabs": "1.0.4",
+		"@radix-ui/react-toast": "1.1.4",
+		"@radix-ui/react-toggle": "1.0.3",
+		"@radix-ui/react-toggle-group": "1.0.4",
+		"@radix-ui/react-tooltip": "1.0.6",
+		"@tailwindcss/line-clamp": "0.4.4",
+		"@tanstack/react-table": "8.9.3",
+		"@tauri-apps/api": "2.0.0-beta.6",
+		"@tauri-apps/plugin-fs": "2.0.0-beta.2",
+		"@tauri-apps/plugin-log": "^2.0.0-beta.2",
+		"@tauri-apps/plugin-os": "2.0.0-beta.2",
+		"@tauri-apps/plugin-shell": "2.0.0-beta.2",
+		"@types/lodash": "4.17.0",
+		"axios": "1.6.8",
+		"class-variance-authority": "0.7.0",
+		"clsx": "2.0.0",
+		"cmdk": "0.2.0",
+		"date-fns": "2.30.0",
+		"lodash": "4.17.21",
+		"lucide-react": "0.263.1",
+		"nanoid": "4.0.2",
+		"next": "14.1.4",
+		"next-auth": "5.0.0-beta.15",
+		"next-themes": "0.2.1",
+		"react": "18.2.0",
+		"react-day-picker": "8.8.0",
+		"react-dom": "18.2.0",
+		"react-hook-form": "7.45.2",
+		"react-wrap-balancer": "1.0.0",
+		"recharts": "2.7.2",
+		"sharp": "^0.33.3",
+		"tailwind-merge": "1.14.0",
+		"tailwind-scrollbar": "3.0.4",
+		"tailwindcss-animate": "1.0.6",
+		"tauri-controls": "0.4.0",
+		"yup": "1.4.0",
+		"zod": "3.21.4",
+		"zustand": "4.5.2"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.6.3",
+		"@ianvs/prettier-plugin-sort-imports": "4.1.0",
+		"@semantic-release/commit-analyzer": "^12.0.0",
+		"@semantic-release/git": "^10.0.1",
+		"@semantic-release/github": "^10.0.2",
+		"@semantic-release/release-notes-generator": "^13.0.0",
+		"@tauri-apps/cli": "2.0.0-beta.11",
+		"@types/node": "20.4.6",
+		"@types/react": "18.2.18",
+		"@types/react-dom": "18.2.7",
+		"autoprefixer": "10.4.14",
+		"conventional-changelog-conventionalcommits": "^7.0.2",
+		"postcss": "8.4.27",
+		"prettier": "3.0.1",
+		"prettier-plugin-tailwindcss": "0.4.1",
+		"semantic-release-replace-plugin": "^1.2.7",
+		"tailwindcss": "3.3.3",
+		"taze": "0.11.2",
+		"typescript": "5.1.6"
+	}
 }
