--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,9 +16,11 @@ tauri-build = { version = "2.0.0-beta", features = [] }
 tauri = { version = "2.0.0-beta", features = [] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+time = "0.3.31"
 tauri-plugin-fs = "2.0.0-beta.3"
 tauri-plugin-os = "2.0.0-beta.3"
 tauri-plugin-shell = "2.0.0-beta.3"
+tauri-plugin-log = { version ="2.0.0-beta.3", features = ["colored"] }
 
 [features]
 # by default Tauri runs in production mode
