--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,8 +4,15 @@ on:
   push:
     tags:
       - "*"
+    branches:
+      - "*"
+    paths:
+      - "**"
+  pull_request:
+    types: [opened, synchronize, reopened]
 jobs:
   create-release:
+    if: github.actor == 'semantic-release-bot'
     permissions:
       contents: write
     runs-on: ubuntu-20.04
@@ -64,20 +71,14 @@ jobs:
         with:
           workspaces: v2 -> v2/target
 
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "lts/*"
-          cache-dependency-path: v2/package-lock.json
+      - name: Install Bun
+        uses: oven-sh/setup-bun@v1
 
       - name: Install apt dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
           sudo apt install -y --no-install-recommends libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev patchelf
-
-      - name: Install bun
-        run: npm install -g bun
 
       - name: Install frontend dependencies
         run: bun install
