chore: Agregada condición para ejecutar el flujo de trabajo al recibir una solicitud manual o cuando el actor es 'semantic-release-bot'

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ on:
     types: [opened, synchronize, reopened]
 jobs:
   create-release:
-    if: github.actor == 'semantic-release-bot'
+    if: github.event_name == 'workflow_dispatch' || github.actor == 'semantic-release-bot'
     permissions:
       contents: write
     runs-on: ubuntu-20.04
