--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,14 +71,25 @@ jobs:
         with:
           workspaces: v2 -> v2/target
 
-      - name: Install Bun
-        uses: jcbhmr/configure-bun-action@v1
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "lts/*"
+          cache-dependency-path: v2/package-lock.json
 
       - name: Install apt dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
           sudo apt install -y --no-install-recommends libwebkit2gtk-4.1-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev patchelf
+
+      - name: Install bun in Windows
+        if: matrix.platform == 'windows-latest'
+        run: iwr bun.sh/install.ps1 | iex
+
+      - name: Install bun in other platforms
+        if: matrix.platform != 'windows-latest' 
+        run: npm install -g bun
 
       - name: Install frontend dependencies
         run: bun install
