--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
 		"zustand": "4.5.2"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.6.3",
+		"@biomejs/biome": "1.6.4",
 		"@ianvs/prettier-plugin-sort-imports": "4.1.0",
 		"@semantic-release/commit-analyzer": "^12.0.0",
 		"@semantic-release/git": "^10.0.1",
@@ -101,5 +101,6 @@
 		"tailwindcss": "3.3.3",
 		"taze": "0.11.2",
 		"typescript": "5.1.6"
-	}
+	},
+	"trustedDependencies": ["@biomejs/biome"]
 }
