--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,14 +10,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "2.0.0-beta", features = [] }
+tauri-build = { version = "2.0.0-beta.11", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-beta", features = [] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-time = "0.3.31"
-tauri-plugin-fs = "2.0.0-beta.3"
+tauri = { version = "2.0.0-beta.14", features = [] }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.115"
+time = "0.3.35"
+tauri-plugin-fs = "2.0.0-beta.4"
 tauri-plugin-os = "2.0.0-beta.3"
 tauri-plugin-shell = "2.0.0-beta.3"
 tauri-plugin-log = { version ="2.0.0-beta.3", features = ["colored"] }
