--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,53 @@
 {
 	"compilerOptions": {
-		"lib": ["dom", "dom.iterable", "esnext"],
+		"lib": [
+			"dom",
+			"dom.iterable",
+			"esnext"
+		],
 		"allowJs": true,
 		"skipLibCheck": true,
 		"strict": true,
-		"forceConsistentCasingInFileNames": true,
 		"noEmit": true,
-		"incremental": true,
 		"esModuleInterop": true,
 		"module": "esnext",
-		"moduleResolution": "node",
+		"moduleResolution": "bundler",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
-		"baseUrl": ".",
-		"paths": {
-			"@/*": ["src/*"]
-		},
+		"incremental": true,
 		"plugins": [
 			{
 				"name": "next"
 			}
 		],
+		"paths": {
+			"@/*": [
+				"./src/*"
+			],
+			"@public/*": [
+				"./public/*"
+			],
+			"@ui/*": [
+				"./src/components/ui/*"
+			],
+			"@hooks/*": [
+				"./src/hooks/*"
+			]
+		},
 		"strictNullChecks": true
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "dist/types/**/*.ts"],
-	"exclude": ["node_modules", "src-tauri", "dist", ".next"]
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		".next/types/**/*.ts",
+		"dist/types/**/*.ts"
+	],
+	"exclude": [
+		"node_modules",
+		"src-tauri",
+		"dist",
+		".next"
+	]
 }
