--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "clsx": "2.0.0",
     "cmdk": "0.2.0",
     "date-fns": "2.30.0",
+    "js-cookie": "^3.0.5",
     "lodash": "4.17.21",
     "lucide-react": "0.263.1",
     "nanoid": "4.0.2",
@@ -91,6 +92,7 @@
     "@semantic-release/release-notes-generator": "^13.0.0",
     "@tauri-apps/cli": "2.0.0-beta.11",
     "@types/canvas-confetti": "^1.6.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
