--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "2.0.0-beta.11", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0-beta.14", features = [] }
+tauri = { version = "2.0.0-beta.14", features = ["devtools"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 time = "0.3.35"
