--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tailwindcss/line-clamp": "0.4.4",
     "@tanstack/react-table": "8.9.3",
     "@tauri-apps/api": "2.0.0-beta.6",
+    "@tauri-apps/plugin-dialog": "^2.0.0-beta.5",
     "@tauri-apps/plugin-fs": "2.0.0-beta.2",
     "@tauri-apps/plugin-log": "^2.0.0-beta.2",
     "@tauri-apps/plugin-os": "2.0.0-beta.2",
