--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,6 +21,7 @@ tauri-plugin-fs = "2.0.0-beta.4"
 tauri-plugin-os = "2.0.0-beta.3"
 tauri-plugin-shell = "2.0.0-beta.3"
 tauri-plugin-log = { version ="2.0.0-beta.3", features = ["colored"] }
+tauri-plugin-dialog = "2.0.0-beta"
 
 [features]
 # by default Tauri runs in production mode
