--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@ jobs:
       contents: write
     runs-on: ubuntu-20.04
     outputs:
-      release_id: ${{ steps.set-release-id.outputs.release_id }}
+      release_id: ${{ steps.set-release-id.outputs.result }}
 
     steps:
       - name: Checkout repository
@@ -34,7 +34,7 @@ jobs:
 
       - name: Find or create release
         id: set-release-id
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             const version = `v${process.env.PACKAGE_VERSION}`;
@@ -56,7 +56,7 @@ jobs:
               release = data;
             }
             console.log(`Release ID: ${release.id}`);
-            return { release_id: release.id };
+            return release.id;
 
   build-tauri:
     needs: create-or-find-release
