--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
       contents: write
     runs-on: ubuntu-20.04
     outputs:
-      release_id: ${{ steps.set-release-id.outputs.release_id }}
+      release_id: ${{ steps.set-release-id.outputs.result }}
 
     steps:
       - name: Checkout repository
@@ -34,7 +34,7 @@ jobs:
 
       - name: Find or create release
         id: set-release-id
-        uses: actions/github-script@v6
+        uses: actions/github-script@v7
         with:
           script: |
             const version = `v${process.env.PACKAGE_VERSION}`;
@@ -56,9 +56,9 @@ jobs:
               release = data;
             }
             console.log(`Release ID: ${release.id}`);
-            return { release_id: release.id };
+            return release.id;
       - name: Print Release Id
-        run: echo ${{ steps.set-release-id.outputs.release_id }}
+        run: echo ${{ steps.set-release-id.outputs.result }}
       - name: Print Release Id 2
         run: echo ${{ needs.create-or-find-release.outputs.release_id }}
       - name: Print Release Id 3
