chore: Agregada dependencia "sharp" en package.json y actualizada descripción de la capacidad principal en capabilities.json

--- a/package.json
+++ b/package.json
@@ -108,5 +108,5 @@
 		"taze": "0.11.2",
 		"typescript": "5.1.6"
 	},
-	"trustedDependencies": ["@biomejs/biome"]
+	"trustedDependencies": ["@biomejs/biome", "sharp"]
 }
