--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -104,6 +104,6 @@ jobs:
         uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NEXT_PUBLIC_APP_URL: ${{ secrets.NEXT_PUBLIC_APP_URL }}
+          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
         with:
           releaseId: ${{ needs.create-or-find-release.outputs.release_id }}
