--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ tauri-plugin-os = "2.0.0-beta.3"
 tauri-plugin-shell = "2.0.0-beta.3"
 tauri-plugin-log = { version ="2.0.0-beta.3", features = ["colored"] }
 tauri-plugin-dialog = "2.0.0-beta"
+tauri-plugin-http = "2.0.0-beta.9"
 
 [features]
 # by default Tauri runs in production mode
