--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "next dev -p 1420",
 		"tauri:dev": "tauri dev",
+		"tauri:build": "tauri build",
 		"generate": "next build",
 		"lint": "biome check .",
 		"lint:fix": "biome check --write --unsafe .",
@@ -108,5 +109,8 @@
 		"taze": "0.11.2",
 		"typescript": "5.1.6"
 	},
-	"trustedDependencies": ["@biomejs/biome", "sharp"]
+	"trustedDependencies": [
+		"@biomejs/biome",
+		"sharp"
+	]
 }
