--- a/biome.json
+++ b/biome.json
@@ -46,6 +46,16 @@
 		}
 	},
 	"files": {
-		"ignore": ["node_modules/**", "build/**", "out/**", ".next/**", "coverage/**", "dist/**", "src-tauri/target/**"]
+		"ignore": [
+			"node_modules/**",
+			"build/**",
+			"out/**",
+			".next/**",
+			"coverage/**",
+			"dist/**",
+			"src-tauri/target/**",
+			"src-tauri/gen/**",
+			".vscode"
+		]
 	}
 }
