--- a/.github/workflows/check-new-versions.yml
+++ b/.github/workflows/check-new-versions.yml
@@ -18,6 +18,7 @@ jobs:
       packages: write
       pull-requests: write
       issues: write
+      actions: read
     steps:
       - name: Setup Repo
         uses: actions/checkout@v4
